[gd_scene load_steps=3 format=3 uid="uid://d30guljojjrcg"]

[ext_resource type="Script" uid="uid://bbr771e6wefaj" path="res://scripts/ui/item_container.gd" id="1_84abf"]
[ext_resource type="Texture2D" uid="uid://d0wuefxt7rnbp" path="res://sprites/fishing_game_assets/4 Icons/Icons_16.png" id="2_84abf"]

[node name="ItemContainer" type="Button"]
custom_minimum_size = Vector2(0, 300)
offset_right = 465.0
offset_bottom = 300.0
size_flags_horizontal = 3
script = ExtResource("1_84abf")

[node name="Texture" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 225.0
grow_horizontal = 2
texture = ExtResource("2_84abf")
stretch_mode = 5

[node name="ItemLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_bottom = -22.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 42
text = "Item"
horizontal_alignment = 1
autowrap_mode = 2

[node name="QuantidadeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -115.0
offset_top = 10.0
offset_right = -22.0
offset_bottom = 68.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 42
text = "2x"
horizontal_alignment = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
